fixed options container extending out too much

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -109,6 +109,7 @@ body {
 
 #optionsContainer {
     width: 800px;
+    height: fit-content;
     background: #eeeeee;
     border: 2px solid black;
 }
